--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -10,7 +10,7 @@
   <span class="tittle-group">
     <a>
       <i class="material-icons">home</i>
-      Aplicação CRUD
+      Início
     </a>
   </span>
 </mat-toolbar>
