--- a/frontend/src/app/components/template/nav/nav.component.css
+++ b/frontend/src/app/components/template/nav/nav.component.css
@@ -10,3 +10,9 @@
 .sidenav i {
   padding-right: 10px;
 }
+
+.content {
+  padding: 16px;
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+}
