--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="header mat-elevation-z4">
   <span>
-    <a
+    <a routerLink="/"
       ><img
         class="logo"
         src="https://angular.io/assets/images/logos/angular/logo-nav@2x.png"
