--- a/frontend/src/app/components/products/products-update/products-update.component.html
+++ b/frontend/src/app/components/products/products-update/products-update.component.html
@@ -18,7 +18,7 @@
       />
     </mat-form-field>
   </form>
-  <button mat-raised-button (click)="updateProduct()" color="primary">
+  <button mat-raised-button (click)="updateProduct()" color="accent">
     Atualizar
   </button>
 
